[package]
name = "statemachine-rs"
version = "0.1.0"
authors = ["yuk1ty <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

description = "A statemachine crate which have zero dependencies."
repository = "https://github.com/yuk1ty/statemachine-rs"
license = "MIT"
readme = "README.md"
keywords = ["statemachine"]
categories = ["data-structures"]

[badges]
github = { repository = "yuk1ty/statemachine-rs", workflow = "Rust" }

[dependencies]
